--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-remote_theme: y7kim/agency-jekyll
+remote_theme: StartBootstrap/startbootstrap-agency
 
 
 
